--- a/css/queries.css
+++ b/css/queries.css
@@ -231,6 +231,7 @@
     align-items: center;
     justify-content: center;
     padding: 2.4rem;
+    text-align: center;
   }
   .btn-right {
     right: 8%;
@@ -255,6 +256,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
   .logo-col,
   .address-col {
